--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react-datepicker": "^4.12.0",
     "react-dom": "latest",
     "react-router-dom": "^6.12.0",
+    "react-toastify": "^9.1.3",
     "styled": "^1.0.0",
     "styled-components": "^4.4.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.27",
     "xlsx": "^0.17.1"
   },
   "description": "https://github.com/mui/material-ui/blob/v5.13.4/docs/data/material/components/drawers/ResponsiveDrawer.js",
