--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mui/material": "^5.14.0",
     "@mui/x-date-pickers": "^6.9.1",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.2",
     "dayjs": "^1.11.8",
     "file-saver": "^2.0.5",
     "moment": "^2.29.4",
