--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@mui/material": "^5.14.0",
     "@mui/x-date-pickers": "^6.20.0",
     "axios": "^1.4.0",
-    "chart.js": "^4.4.2",
+    "chart.js": "^4.4.6",
     "dayjs": "^1.11.11",
     "file-saver": "^2.0.5",
     "moment": "^2.29.4",
     "prop-types": "latest",
     "react": "latest",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.12.0",
     "react-dom": "latest",
     "react-router-dom": "^6.12.0",
